# Science_of_programming

./: .gitignore  README.md
Calculator/: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Loader.cpp  Loader.h  Operations.cpp  Operations.h  Operator.h  Parser.cpp  Parser.h  README.md
Wrapper/: CMakeLists.txt  Engine.h  Source.cpp  Wrapper.h  Wrapper.sln  Wrapper.vcxproj  Wrapper.vcxproj.filters
XmlResource/: .gitignore  CMakeLists.txt  Iterator.cpp  Iterator.h  Node.cpp  Node.h  Resource.cpp  Resource.h  Source.cpp  Tree.cpp  Tree.h  input.txt  output.txt
